[package]
name = "redis-alchemy"
version = "0.2.0"
authors = ["Shiwei Zhang <ylxdzsw@gmail.com>"]
edition = "2018"

[dependencies]
oh-my-rust = { git = "https://github.com/ylxdzsw/oh-my-rust" }
collect-enum = { git = "https://github.com/ylxdzsw/collect-enum" }
detached-bufreader = { git = "https://github.com/ylxdzsw/detached-bufreader" }
